# hair-recommendation-agent

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml  test.yml
src/hair_recommendation_agent/: __init__.py  agent.py
src/hair_recommendation_agent/data/: __init__.py  face_shape_rules.py  hair_type_rules.py  style_profiles.py
tests/: test_agent.py
