[metadata]
name = hair-recommendation-agent
version = 0.1.1
description = Advanced hairstyle recommendation agent with rule-based scoring
author = Manolo Salsas
author_email = manolez@gmail.com
license = MIT
license_file = LICENSE
url = https://github.com/msalsas/hair-recommendation-agent
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    agent-core-framework>=0.1.6

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=23.0.0

[options.package_data]
* = LICENSE

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
